Adding Desk.com API initialization

--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,12 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
-# Ignore bundler config.
+# Ignore config files
 /.bundle
 /.rbenv-gemsets
 /.ruby-version
 /.gems
+config/application.yml
 
 # Ignore all logfiles and tempfiles.
 /log/*
